--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -21,3 +21,12 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 480px) {
+    .productList {
+        padding: 10px;
+    }
+    .productList-texts {
+        width: 100%;
+    }
+}
